--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -44,4 +44,8 @@
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
     <string name="click_me">click me</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="close_nav">Close Navigation</string>
+    <string name="open_nav">Open Navigation</string>
 </resources>
